// Copyright 2018 Istio Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

// $title: Mixer Adapter Model
// $overview: Definitions used when creating Mixer templates
// $location: https://istio.io/docs/reference/config/mixer/istio.mixer.adapter.model.v1beta1.html

// This package defines the types that are used when creating Mixer templates. `ValueType` defined in this pacakge
// is also used by adapters to know the underlying datatype of the instance fields.
package istio.mixer.adapter.model.v1beta1;

option go_package="istio.io/api/mixer/adapter/model/v1beta1";

import "google/protobuf/descriptor.proto";


// The available varieties of templates, controlling the semantics of what an adapter does with each instance.
enum TemplateVariety {
    // Makes the template applicable for Mixer's check calls.
    TEMPLATE_VARIETY_CHECK = 0;
    // Makes the template applicable for Mixer's report calls.
    TEMPLATE_VARIETY_REPORT = 1;
    // Makes the template applicable for Mixer's quota calls.
    TEMPLATE_VARIETY_QUOTA = 2;
    // Makes the template applicable for Mixer's quota calls.
    TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR = 3;
}

// File option for the TemplateVariety.
extend google.protobuf.FileOptions {
    TemplateVariety template_variety = 72295727;
}
